<resources>
    <!--    <string name=""></string>   -->
    <string name="app_name">Mingle</string>
    <string name="app_icon">앱 아이콘</string>
    <string name="green">#18573A</string>
    <string name="button_back">button_back</string>
    <string name="layout_background_bottom_round">layout_background_bottom_round</string>

    <string name="must_use_agree">(필수) <u>서비스 이용약관</u> 동의</string>

    <string name="must_private_agree">(필수) <u>개인정보 처리방침</u> 동의</string>

    <string name="resend_number">인증문자가 재발송되었습니다.\n재발송이 재차 필요한 경우 <b>15초 후</b>에 시도해 주세요"</string>

    <string name="login_if_exist"><u>로그인하기</u></string>

    <string name="wrong_info_text"><b>일치하는 이메일이나 비밀번호를 찾지 못했습니다.</b>\n띄어쓰기나 잘못된 글자가 있는지 확인해주세요</string>

    <string name="short_pw"><b>비밀번호는 최소 6자 이상이여야 합니다.</b>\n비밀번호를 다시 한번 확인해 주세요.</string>

    <string name="detail_terms"><u>자세한 운영정책 보러가기</u></string>

    <string name="logout"><u>로그아웃</u></string>

    <string name="email">team-mingle@mingle.community</string>

    <string name="default_notification_channel_id" translatable="false">com.community.mingle</string>
    <!--
        This is the name that users will see when interacting with this channel.
        It should describe the category of notifications that will be sent through this channel
     -->
    <!-- [START fcm_default_icon_string] -->
    <string name="default_notification_channel_name" translatable="true">Weather</string>
    <!-- [END fcm_default_icon_string] -->
    <string name="msg_subscribe_failed">Failed to subscribe to weather topic</string>
    <string name="fcm_message">FCM Message</string>


    <string name="guideline_post_detail"> \u2022 운영규칙을 위반하는 댓글은 삭제될 수 있습니다.\n\u2022 악의적인 글 혹은 댓글은 오른쪽 상단 버튼을 통해 신고가 가능합니다.</string>

    <string name="guideline_post_write">밍글에서 나누고 싶은 이야기가 있나요? \n  \u2022 운영규칙을 위반하는 게시글은 삭제 될 수 있습니다. \n  \u2022 다른 유저들에게 불쾌감을 줄 수 있는 내용은 신고로 제재\n     될 수 있습니다. \n  \u2022 더 상세한 내용은 <b>밍글 가이드라인</b>을 참고하세요.</string>
    <string name="notification">알림</string>
    <string name="hot_posts">불타오르는 게시글</string>

    <string name="total_board_tab_name_free">자유</string>
    <string name="total_board_tab_name_questions">질문</string>
    <string name="total_board_tab_name_mingle_news">밍글소식</string>

    <string name="univ_board_tab_name_free">자유</string>
    <string name="univ_board_tab_name_questions">질문</string>
    <string name="univ_board_tab_name_council">학생회</string>
    <string name="hotPostsBoard_title">불타오르는 게시판</string>
    <string name="goBack">뒤로가기</string>
    <string name="close">닫기</string>
    <string name="country_inquire_message">재학 중인 학교가\n어디에 위치해 있나요?</string>
    <string name="school_info_require_message">원활한 앱 이용을 위해 재학 정보가 필요해요.</string>
    <string name="select_country">국가 선택</string>
    <string name="toNextPage">다음으로</string>
    <string name="country_hongkong">홍콩</string>
    <string name="country_singapore">싱가포르</string>
    <string name="country_UK">영국</string>
    <string name="total_board_tab_name_all">전체글</string>
    <string name="univ_board_tab_name_all">전체글</string>
</resources>

